welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value m
	m=Math.abs(n);
        ^nearHundred:3: error: not found: value m
	if(m>=90 && m=<110){
           ^