welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	m=Math.abs(n);
	if(m>=90 && m=<110){
		return true
	}else{
		return false
	}
}
